--- a/SampleAccelloriOSFramework/FrameworkSB.storyboard
+++ b/SampleAccelloriOSFramework/FrameworkSB.storyboard
@@ -165,36 +165,43 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KVw-PH-BPL">
-                                                    <rect key="frame" x="16" y="0.0" width="382" height="30"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="30" id="hje-wU-xgv"/>
-                                                    </constraints>
+                                                    <rect key="frame" x="16" y="0.0" width="290" height="25.5"/>
                                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="21"/>
                                                     <color key="textColor" name="AppThemeColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="4597 Jimmy Lee Smith Pkwy Hiram, Georgia 30141" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LDI-sc-sjz">
-                                                    <rect key="frame" x="16" y="38" width="382" height="46"/>
+                                                    <rect key="frame" x="16" y="33.5" width="290" height="46"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="46" id="3sB-Wm-uoo"/>
+                                                        <constraint firstAttribute="height" constant="46" id="nme-av-D8j"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="location.circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="JZz-eX-S9r">
+                                                    <rect key="frame" x="368" y="35.5" width="30" height="29"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="30" id="WEe-pK-J1p"/>
+                                                        <constraint firstAttribute="height" constant="30" id="gsI-hm-tCW"/>
+                                                    </constraints>
+                                                </imageView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="LDI-sc-sjz" firstAttribute="top" secondItem="KVw-PH-BPL" secondAttribute="bottom" constant="8" id="Hbr-ly-uga"/>
-                                                <constraint firstAttribute="trailing" secondItem="KVw-PH-BPL" secondAttribute="trailing" constant="16" id="MFX-IO-Z1g"/>
-                                                <constraint firstItem="KVw-PH-BPL" firstAttribute="top" secondItem="R2f-uk-LXH" secondAttribute="top" id="Nyj-lh-Pt7"/>
-                                                <constraint firstItem="LDI-sc-sjz" firstAttribute="trailing" secondItem="KVw-PH-BPL" secondAttribute="trailing" id="Yvi-mC-QJd"/>
-                                                <constraint firstItem="LDI-sc-sjz" firstAttribute="leading" secondItem="KVw-PH-BPL" secondAttribute="leading" id="gbq-TM-peT"/>
-                                                <constraint firstItem="KVw-PH-BPL" firstAttribute="leading" secondItem="R2f-uk-LXH" secondAttribute="leading" constant="16" id="w4G-3b-aCE"/>
+                                                <constraint firstItem="KVw-PH-BPL" firstAttribute="leading" secondItem="R2f-uk-LXH" secondAttribute="leading" constant="16" id="2ri-iS-GMS"/>
+                                                <constraint firstItem="JZz-eX-S9r" firstAttribute="centerY" secondItem="R2f-uk-LXH" secondAttribute="centerY" id="3Om-P5-Vyx"/>
+                                                <constraint firstItem="KVw-PH-BPL" firstAttribute="width" secondItem="R2f-uk-LXH" secondAttribute="width" multiplier="0.7" id="Imp-vT-v0s"/>
+                                                <constraint firstItem="LDI-sc-sjz" firstAttribute="top" secondItem="KVw-PH-BPL" secondAttribute="bottom" constant="8" id="iUl-po-7vw"/>
+                                                <constraint firstItem="KVw-PH-BPL" firstAttribute="top" secondItem="R2f-uk-LXH" secondAttribute="top" id="jeY-QP-foB"/>
+                                                <constraint firstItem="LDI-sc-sjz" firstAttribute="leading" secondItem="R2f-uk-LXH" secondAttribute="leading" constant="16" id="n3n-p2-7CX"/>
+                                                <constraint firstItem="LDI-sc-sjz" firstAttribute="width" secondItem="R2f-uk-LXH" secondAttribute="width" multiplier="0.7" id="oG1-B8-NMQ"/>
+                                                <constraint firstAttribute="trailing" secondItem="JZz-eX-S9r" secondAttribute="trailing" constant="16" id="tkS-8e-Psz"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="addressLbl" destination="LDI-sc-sjz" id="Uul-BM-yeD"/>
                                             <outlet property="cityLbl" destination="KVw-PH-BPL" id="r7a-ze-9uj"/>
+                                            <outlet property="directionsImageView" destination="JZz-eX-S9r" id="Ay1-ys-vMv"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -219,7 +226,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gIY-2w-gw8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="974" y="-181"/>
+            <point key="canvasLocation" x="973.91304347826099" y="-181.47321428571428"/>
         </scene>
         <!--Map View Controller-->
         <scene sceneID="O2c-6j-hqa">
@@ -255,6 +262,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="location.circle" catalog="system" width="128" height="121"/>
         <namedColor name="AppThemeColor">
             <color red="0.062745098039215685" green="0.18431372549019609" blue="0.4392156862745098" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
