--- a/SampleAccelloriOSFramework/FrameworkSB.storyboard
+++ b/SampleAccelloriOSFramework/FrameworkSB.storyboard
@@ -157,11 +157,11 @@
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="610"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="location_cell" rowHeight="100" id="NgT-p0-iga" customClass="LocationTableViewCell" customModule="SampleAccelloriOSFramework" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="44.5" width="414" height="100"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="location_cell" rowHeight="125" id="NgT-p0-iga" customClass="LocationTableViewCell" customModule="SampleAccelloriOSFramework" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="44.5" width="414" height="125"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="NgT-p0-iga" id="R2f-uk-LXH">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="100"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="125"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KVw-PH-BPL">
@@ -180,21 +180,33 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="location.circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="JZz-eX-S9r">
-                                                    <rect key="frame" x="368" y="35.5" width="30" height="29"/>
+                                                    <rect key="frame" x="368" y="48" width="30" height="29"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="30" id="WEe-pK-J1p"/>
                                                         <constraint firstAttribute="height" constant="30" id="gsI-hm-tCW"/>
                                                     </constraints>
                                                 </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Distance" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KuC-JK-rRy">
+                                                    <rect key="frame" x="16" y="83.5" width="290" height="22"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="22" id="95w-Zc-Joz"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="KVw-PH-BPL" firstAttribute="leading" secondItem="R2f-uk-LXH" secondAttribute="leading" constant="16" id="2ri-iS-GMS"/>
                                                 <constraint firstItem="JZz-eX-S9r" firstAttribute="centerY" secondItem="R2f-uk-LXH" secondAttribute="centerY" id="3Om-P5-Vyx"/>
+                                                <constraint firstItem="KuC-JK-rRy" firstAttribute="top" secondItem="LDI-sc-sjz" secondAttribute="bottom" constant="4" id="EPn-o0-C4f"/>
                                                 <constraint firstItem="KVw-PH-BPL" firstAttribute="width" secondItem="R2f-uk-LXH" secondAttribute="width" multiplier="0.7" id="Imp-vT-v0s"/>
+                                                <constraint firstItem="KuC-JK-rRy" firstAttribute="leading" secondItem="KVw-PH-BPL" secondAttribute="leading" id="gE6-T2-rej"/>
                                                 <constraint firstItem="LDI-sc-sjz" firstAttribute="top" secondItem="KVw-PH-BPL" secondAttribute="bottom" constant="8" id="iUl-po-7vw"/>
                                                 <constraint firstItem="KVw-PH-BPL" firstAttribute="top" secondItem="R2f-uk-LXH" secondAttribute="top" id="jeY-QP-foB"/>
                                                 <constraint firstItem="LDI-sc-sjz" firstAttribute="leading" secondItem="R2f-uk-LXH" secondAttribute="leading" constant="16" id="n3n-p2-7CX"/>
                                                 <constraint firstItem="LDI-sc-sjz" firstAttribute="width" secondItem="R2f-uk-LXH" secondAttribute="width" multiplier="0.7" id="oG1-B8-NMQ"/>
+                                                <constraint firstItem="KuC-JK-rRy" firstAttribute="trailing" secondItem="KVw-PH-BPL" secondAttribute="trailing" id="qi0-re-UgX"/>
                                                 <constraint firstAttribute="trailing" secondItem="JZz-eX-S9r" secondAttribute="trailing" constant="16" id="tkS-8e-Psz"/>
                                             </constraints>
                                         </tableViewCellContentView>
@@ -202,6 +214,7 @@
                                             <outlet property="addressLbl" destination="LDI-sc-sjz" id="Uul-BM-yeD"/>
                                             <outlet property="cityLbl" destination="KVw-PH-BPL" id="r7a-ze-9uj"/>
                                             <outlet property="directionsImageView" destination="JZz-eX-S9r" id="Ay1-ys-vMv"/>
+                                            <outlet property="milesLbl" destination="KuC-JK-rRy" id="o1p-WE-chB"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
